force-app/main/default/objects/Customer_Product_Line__c/Customer_Product_Line__c.object-meta.xml
<CustomObject>
    <label>Customer Product Line</label>
    <nameField>
        <displayFormat>PL{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>