force-app/main/default/objects/Customer_Product_Line__c/fields/Actual_Business_Stopping_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Business_Stopping_Date__c</fullName>
    <label>Actual Business Stopping Date_del</label>
    <type>Date</type>
</CustomField>