force-app/main/default/objects/Customer_Product_Line__c/fields/Actual_Development_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Development_Date__c</fullName>
    <label>Actual Development Date</label>
    <type>Date</type>
</CustomField>