force-app/main/default/objects/Customer_Product_Line__c/fields/Annual_Sales_Scale__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Scale__c</fullName>
    <label>Annual Sales Scale($10K)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>