force-app/main/default/objects/Customer_Product_Line__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency Customer</fullName>
            </value>
            <value>
                <fullName>OEM Customer</fullName>
            </value>
            <value>
                <fullName>Customer of Oversea Company</fullName>
            </value>
            <value>
                <fullName>Agency + OEM Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>