force-app/main/default/objects/Customer_Product_Line__c/fields/Cooperation_Level__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_Level__c</fullName>
    <label>Cooperation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic customer</fullName>
            </value>
            <value>
                <fullName>Advance customer</fullName>
            </value>
            <value>
                <fullName>Ordinary customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>