force-app/main/default/objects/Customer_Product_Line__c/fields/Development_Stage__c.field-meta.xml
<CustomField>
    <fullName>Development_Stage__c</fullName>
    <label>Development Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undeveloped</fullName>
                <default>true</default>
                <label>Undeveloped</label>
            </value>
            <value>
                <fullName>Achieved Preliminary Intention</fullName>
            </value>
            <value>
                <fullName>Prototype Delivery</fullName>
            </value>
            <value>
                <fullName>Product Confirmation</fullName>
            </value>
            <value>
                <fullName>Forecast Order Confirmation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Development Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>