force-app/main/default/objects/Customer_Product_Line__c/fields/Evaluated_Score__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Score__c</fullName>
    <label>Evaluated Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>