force-app/main/default/objects/Customer_Product_Line__c/fields/Expected_Business_Stopping_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Business_Stopping_Date__c</fullName>
    <label>Expected Business End Date</label>
    <type>Date</type>
</CustomField>