force-app/main/default/objects/Customer_Product_Line__c/fields/Expected_Development_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Development_Date__c</fullName>
    <label>Expected Development Date</label>
    <type>Date</type>
</CustomField>