force-app/main/default/objects/Customer_Product_Line__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>SAP Customer Code + Product Line</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>