force-app/main/default/objects/Customer_Product_Line__c/fields/Industry_Position__c.field-meta.xml
<CustomField>
    <fullName>Industry_Position__c</fullName>
    <inlineHelpText>TOP channel refers to the channel with a market share of not less than 5%</inlineHelpText>
    <label>Industry Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Channel</fullName>
            </value>
            <value>
                <fullName>Non-Top Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>