force-app/main/default/objects/Customer_Product_Line__c/fields/IsExistSales__c.field-meta.xml
<CustomField>
    <fullName>IsExistSales__c</fullName>
    <formula>Key_Sales__c +  Sales_member01__c  + Sales_member02__c  +Sales_member03__c  +Sales_member04__c   +Sales_member05__c  +Sales_member06__c  +Sales_member07__c  +Sales_member08__c  +Sales_member09__c</formula>
    <label>IsExistSales</label>
    <type>Text</type>
</CustomField>