force-app/main/default/objects/Customer_Product_Line__c/fields/IsSelfManagement__c.field-meta.xml
<CustomField>
    <fullName>IsSelfManagement__c</fullName>
    <formula>IF( AND(!ISBLANK( Customer__c ) ,!ISBLANK( Management_Customer__c ),Customer__c = Management_Customer__c ),TRUE,FALSE )</formula>
    <label>IsSelfManagement</label>
    <type>Checkbox</type>
</CustomField>