force-app/main/default/objects/Customer_Product_Line__c/fields/Key_Sales__c.field-meta.xml
<CustomField>
    <fullName>Key_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>