force-app/main/default/objects/Customer_Product_Line__c/fields/Main_Brand_Share__c.field-meta.xml
<CustomField>
    <fullName>Main_Brand_Share__c</fullName>
    <label>Customer&apos;s Other Brand Collaboration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Line_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>PHILIPS</fullName>
            </value>
            <value>
                <fullName>SONY</fullName>
            </value>
            <value>
                <fullName>Vizio</fullName>
            </value>
            <value>
                <fullName>TCL</fullName>
            </value>
            <value>
                <fullName>Panasonic</fullName>
            </value>
            <value>
                <fullName>Skyworth</fullName>
            </value>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
            <value>
                <fullName>AOC</fullName>
            </value>
            <value>
                <fullName>Haier</fullName>
            </value>
            <value>
                <fullName>Changhong</fullName>
            </value>
            <value>
                <fullName>Konka</fullName>
            </value>
            <value>
                <fullName>Hunter</fullName>
            </value>
            <value>
                <fullName>Fridgemaster</fullName>
            </value>
            <value>
                <fullName>Mirage</fullName>
            </value>
            <value>
                <fullName>Mabe</fullName>
            </value>
            <value>
                <fullName>Whirpool</fullName>
            </value>
            <value>
                <fullName>York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>