force-app/main/default/objects/Customer_Product_Line__c/fields/Management_Customer__c.field-meta.xml
<CustomField>
    <fullName>Management_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CustomerProductLineForMangeToCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>