force-app/main/default/objects/Customer_Product_Line__c/fields/Management_Customer_Branch_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Customer_Branch_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management Customer(Branch Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>