force-app/main/default/objects/Customer_Product_Line__c/fields/Minimum_Gross_Profit_Margin_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Gross_Profit_Margin_Level__c</fullName>
    <inlineHelpText>Sales Department required!</inlineHelpText>
    <label>Minimum Gross Profit Margin- Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>