force-app/main/default/objects/Customer_Product_Line__c/fields/N_1_Normal_Customer__c.field-meta.xml
<CustomField>
    <fullName>N_1_Normal_Customer__c</fullName>
    <formula>IF( Rank_Of_Last_Year__c  = &apos;Normal Customer&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N-1 Normal Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>