force-app/main/default/objects/Customer_Product_Line__c/fields/N_Quality_Customer__c.field-meta.xml
<CustomField>
    <fullName>N_Quality_Customer__c</fullName>
    <formula>IF( TEXT(Rank__c)  = &apos;Quality Customer&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N Quality Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>