force-app/main/default/objects/Customer_Product_Line__c/fields/Parent_Customer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Customer__c</fullName>
    <formula>Customer__r.ParentId</formula>
    <label>Parent Customer</label>
    <type>Text</type>
</CustomField>