force-app/main/default/objects/Customer_Product_Line__c/fields/PL_ExID__c.field-meta.xml
<CustomField>
    <fullName>PL_ExID__c</fullName>
    <externalId>true</externalId>
    <label>PL ExID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>