force-app/main/default/objects/Customer_Product_Line__c/fields/Product_Line_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>Product Line External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>