force-app/main/default/objects/Customer_Product_Line__c/fields/Product_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Name__c</fullName>
    <label>Product Line Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Laser TV</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>LCAC</fullName>
            </value>
            <value>
                <fullName>Small Domestic Home Appliances</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>Sound Bar</fullName>
            </value>
            <value>
                <fullName>Hitachi Commercial AC</fullName>
            </value>
            <value>
                <fullName>Medical Device</fullName>
            </value>
            <value>
                <fullName>B-Monitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>