force-app/main/default/objects/Customer_Product_Line__c/fields/Prospective_Rank__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Rank__c</fullName>
    <label>Prospective Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategy Customer</fullName>
            </value>
            <value>
                <fullName>Quality Customer</fullName>
            </value>
            <value>
                <fullName>Normal Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>