force-app/main/default/objects/Customer_Product_Line__c/fields/Rank_Of_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Rank_Of_Last_Year__c</fullName>
    <label>Rank of Last Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>