force-app/main/default/objects/Customer_Product_Line__c/fields/Rank_Of_The_Year_Before_Last__c.field-meta.xml
<CustomField>
    <fullName>Rank_Of_The_Year_Before_Last__c</fullName>
    <label>Rank of the Year before Last</label>
    <length>255</length>
    <type>Text</type>
</CustomField>