force-app/main/default/objects/Customer_Product_Line__c/fields/Recent_Evaluated_Rank__c.field-meta.xml
<CustomField>
    <fullName>Recent_Evaluated_Rank__c</fullName>
    <label>Recent Evaluated Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategy Customer</fullName>
            </value>
            <value>
                <fullName>Quality Customer</fullName>
            </value>
            <value>
                <fullName>Normal Customer</fullName>
            </value>
            <value>
                <fullName>Inferior Customer</fullName>
            </value>
            <value>
                <fullName>Potential Eliminated Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>