force-app/main/default/objects/Customer_Product_Line__c/fields/Sales_member01__c.field-meta.xml
<CustomField>
    <fullName>Sales_member01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales member01</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Product_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>