force-app/main/default/objects/Customer_Product_Line__c/fields/Sales_member02__c.field-meta.xml
<CustomField>
    <fullName>Sales_member02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales member02</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Product_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>