force-app/main/default/objects/Customer_Product_Line__c/fields/Sales_member03__c.field-meta.xml
<CustomField>
    <fullName>Sales_member03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales member03</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Product_Lines3</relationshipName>
    <type>Lookup</type>
</CustomField>