force-app/main/default/objects/Customer_Product_Line__c/validationRules/Minimum_Gross_Profit_Margin_Level_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Gross_Profit_Margin_Level_check</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(Customer__r.Sales_Region__c, &apos;USA&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;USA(OEM)&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense Mexico&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense Australia&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense Malaysia&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense SA Sales Holdings&apos;) ) &amp;&amp; ISBLANK( Minimum_Gross_Profit_Margin_Level__c )</errorConditionFormula>
    <errorDisplayField>Minimum_Gross_Profit_Margin_Level__c</errorDisplayField>
    <errorMessage>Please input Minimum Gross Profit Margin-Level</errorMessage>
</ValidationRule>