force-app/main/default/objects/Customer_Product_Line__c/validationRules/Oversea_Classification_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Oversea_Classification_Check</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense USA&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense Malaysia&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense Mexico&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense Australia&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Hisense South Africa&apos;) )
&amp;&amp; ! ISBLANK( TEXT(Classification__c) ) 
&amp;&amp; !ISPICKVAL( Classification__c ,&apos;Customer of Oversea Company&apos;
)</errorConditionFormula>
    <errorDisplayField>Classification__c</errorDisplayField>
    <errorMessage>Only &apos;Customer of Oversea Company&apos; can be selected in the classification</errorMessage>
</ValidationRule>