force-app/main/default/objects/Customer_Product_Line__c/validationRules/SD_Classification_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SD_Classification_Check</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL(Customer__r.Sales_Region__c, &apos;USA(OEM)&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Europe Sales Department&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;American Sales Department&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Middle East and Africa Sales Department&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Asia-Pacific Sales Department&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Key Account Sales Department&apos;) ||
ISPICKVAL(Customer__r.Sales_Region__c, &apos;Communications Sales Department&apos;))
&amp;&amp;   ISPICKVAL( Classification__c ,&apos;Customer of Oversea Company&apos;)</errorConditionFormula>
    <errorDisplayField>Classification__c</errorDisplayField>
    <errorMessage>Customer sales region is not Oversea Company!</errorMessage>
</ValidationRule>