force-app/main/default/objects/Customer_Product_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Rank__c</columns>
    <columns>Rank_Of_Last_Year__c</columns>
    <columns>Rank_Of_The_Year_Before_Last__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>