force-app/main/default/objects/Customer_Product_Line__c/listViews/Hisense_Australia.listView-meta.xml
<ListView>
    <fullName>Hisense_Australia</fullName>
    <columns>NAME</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Customer__c</columns>
    <columns>N_Quality_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Australia</value>
    </filters>
    <label>Hisense Australia</label>
    <sharedTo>
        <group>HQ_Group</group>
    </sharedTo>
</ListView>