force-app/main/default/objects/Customer_Product_Line__c/listViews/Hisense_Mexico.listView-meta.xml
<ListView>
    <fullName>Hisense_Mexico</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Rank__c</columns>
    <columns>Rank_Of_Last_Year__c</columns>
    <columns>Rank_Of_The_Year_Before_Last__c</columns>
    <filterScope>Mine</filterScope>
    <label>Hisense Mexico</label>
    <sharedTo>
        <roleAndSubordinates>Mexico_GM</roleAndSubordinates>
    </sharedTo>
</ListView>